--- a/packages/custom/products/public/assets/css/products.css
+++ b/packages/custom/products/public/assets/css/products.css
@@ -95,3 +95,91 @@ input.quantity{ width:38px; height:25px; border:1px solid #dbdbdb; padding:5px;}
 input.continue-shop{ border:none; background:url("/products/assets/img/continue-shop.jpg") top no-repeat; width:132px; height:28px; float:left; cursor:pointer;}
 input.place-order{ border:none;background:url("/products/assets/img/place-order-btn.jpg") top no-repeat; width:85px; height:28px; float:right; cursor:pointer;}
 .continue-btns{ padding-top:15px;}
+
+/********* ********* ********* color page ********* ********* *********/
+.palette span {
+  display: inline-block;
+  vertical-align: top;
+  margin: 0 4px;
+  width: 24px;
+  height: 24px;
+  border: 1px solid;
+  cursor: pointer;
+  box-shadow: 0 1px 2px #ccc;
+}
+
+.highlights span {
+  border-radius: 4px;
+}
+
+.grapefruit {
+  background-color: #ED5565;
+  border-color: #DA4453;
+  color: #DA4453;
+}
+
+.bittersweet {
+  background-color: #FC6E51;
+  border-color: #E9573F;
+  color: #E9573F;
+}
+
+.sunflower {
+  background-color: #FFCE54;
+  border-color: #F6BB42;
+  color: #F6BB42;
+}
+
+.grass {
+  background-color: #A0D468;
+  border-color: #8CC152;
+  color: #8CC152;
+}
+
+.mint {
+  background-color: #48CFAD;
+  border-color: #37BC9B;
+  color: #37BC9B;
+}
+
+.aqua {
+  background-color: #4FC1E9;
+  border-color: #3BAFDA;
+  color: #3BAFDA;
+}
+
+.bluejeans {
+  background-color: #5D9CEC;
+  border-color: #4A89DC;
+  color: #4A89DC;
+}
+
+.lavender {
+  background-color: #AC92EC;
+  border-color: #967ADC;
+  color: #967ADC;
+}
+
+.pinkrose {
+  background-color: #EC87C0;
+  border-color: #D770AD;
+  color: #D770AD;
+}
+
+.lightgray {
+  background-color: #F5F7FA;
+  border-color: #E6E9ED;
+  color: #E6E9ED;
+}
+
+.mediumgray {
+  background-color: #CCD1D9;
+  border-color: #AAB2BD;
+  color: #AAB2BD;
+}
+
+.darkgray {
+  background-color: #656D78;
+  border-color: #434A54;
+  color: #434A54;
+}
